--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mysten/enoki": "^0.3.17",
     "@mysten/seal": "^0.6.0",
     "@mysten/sui.js": "^0.54.1",
+    "@mysten/walrus": "^0.7.0",
     "@mysten/zklogin": "^0.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
