--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mysten/enoki": "^0.3.17",
     "@mysten/seal": "^0.6.0",
     "@mysten/sui.js": "^0.54.1",
+    "@mysten/wallet-standard": "^0.17.0",
     "@mysten/zklogin": "^0.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,6 +24,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.17.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
@@ -41,7 +43,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.160.0",
