--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.17.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^10.17.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.303.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
